--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -82,21 +82,35 @@
 							}
 							throw new Error('Miniatura não encontrada');
 						})
-						.then(carrinho => {
+						.then(data => {
+							const { carrinho, alreadyChecked } = data;
+							
 							lastChecked.unshift(carrinho);
 							if (lastChecked.length > 5) {
 								lastChecked.pop();
 							}
 							updateLastCheckedList();
 							this.value = '';
-							Swal.fire({
-								toast: true,
-								position: 'top-end',
-								icon: 'success',
-								title: 'Checado!',
-								showConfirmButton: false,
-								timer: 1500
-							});
+
+							if (alreadyChecked) {
+								Swal.fire({
+									toast: true,
+									position: 'top-end',
+									icon: 'warning',
+									title: 'Já checado!',
+									showConfirmButton: false,
+									timer: 1500
+								});
+							} else {
+								Swal.fire({
+									toast: true,
+									position: 'top-end',
+									icon: 'success',
+									title: 'Checado!',
+									showConfirmButton: false,
+									timer: 1500
+								});
+							}
 						})
 						.catch(error => {
 							Swal.fire('Erro!', error.message, 'error');
