--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -94,12 +94,9 @@
 
 							if (alreadyChecked) {
 								Swal.fire({
-									toast: true,
-									position: 'top-end',
 									icon: 'warning',
 									title: 'Já checado!',
-									showConfirmButton: false,
-									timer: 1500
+									text: 'Esta miniatura já foi checada anteriormente.'
 								});
 							} else {
 								Swal.fire({
