--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,6 +42,7 @@
 						<a href="/carrinho/export/pdf" class="btn btn-default btn-sm" title="Exportar para PDF"><i class="fa fa-file-pdf-o"></i></a>
 						<a href="/carrinho/export/pdf/pictures" class="btn btn-default btn-sm" title="Exportar PDF com fotos"><i class="fa fa-file-image-o"></i></a>
 						<a href="/check" class="btn btn-success btn-sm" title="Checagem Rápida"><i class="fa fa-check-square-o"></i></a>
+						<a href="/display" class="btn btn-warning btn-sm" title="Expositores"><i class="fa fa-th"></i></a>
 					  </div>
 		            </div>
 		            <div class="box-body" id="main-conteiner">
