--- a/src/main/resources/static/common/style.css
+++ b/src/main/resources/static/common/style.css
@@ -184,3 +184,7 @@ body {
     flex-wrap: wrap;
     align-items: flex-start;
 }
+
+.navbar-custom-menu .navbar-nav > li > .btn {
+    border-left: none !important;
+}
