--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -779,6 +779,11 @@
 
 			// Initial load
 			fetchInitialList();
+
+			$('#logout-link').on('click', function(e) {
+				e.preventDefault();
+				$('#logout-form').submit();
+			});
 		});
 	</script>
 </body>
