--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -425,6 +425,13 @@
 										${categories.map(cat => `<option value="${cat.id}" ${carrinho.categoria && cat.id === carrinho.categoria.id ? 'selected' : ''}>${cat.nome}</option>`).join('')}
 									</select>
 								</div>
+								<div class="form-group">
+									<div class="checkbox">
+										<label>
+											<input type="checkbox" id="checked" ${carrinho.checked ? 'checked' : ''}> Checado
+										</label>
+									</div>
+								</div>
 								                                                                <div class="form-group">
 								                                                                    <label for="imagem">Alterar Imagem</label>
 								                                                                    <div class="input-group">
