--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -18,7 +18,7 @@
 		            <div class="box-header with-border">
 		              <h3 class="box-title">Checagem Rápida</h3>
 		              <div class="box-tools pull-right">
-		                <a href="/carrinho/export/pdf/unchecked" class="btn btn-warning btn-sm" title="Exportar não checados para PDF"><i class="fa fa-file-pdf-o"></i></a>
+		                <a href="/carrinho/export/pdf/unchecked" class="btn btn-default btn-sm" title="Exportar não checados para PDF"><i class="fa fa-list-ul"></i></a>
 		                <a href="/carrinho/export/pdf/checked" class="btn btn-success btn-sm" title="Exportar checados para PDF"><i class="fa fa-file-pdf-o"></i></a>
 		                <button id="reset-checked-button" class="btn btn-danger btn-sm" title="Resetar todos para não checado"><i class="fa fa-refresh"></i></button>
 		              </div>
