--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -13,9 +13,13 @@
 
 
 	<ul class="sidebar-menu tree" data-widget="tree">
-		<li><a href="/"> Home</a></li>
-		<li><a href="/"> Teste 01</a></li>
-		<li><a href="/"> Teste 02</a></li>
+		<li class="header">NAVEGAÇÃO</li>
+		<li><a href="/"><i class="fa fa-home"></i> <span>Home</span></a></li>
+		<li><a href="/check"><i class="fa fa-check-square-o"></i> <span>Checagem Rápida</span></a></li>
+		<li><a href="/display"><i class="fa fa-th"></i> <span>Expositores</span></a></li>
+		<li class="header">SISTEMA</li>
+		<li><a href="/carrinho/export/pdf/unchecked"><i class="fa fa-file-text-o"></i> <span>Não checados (PDF)</span></a></li>
+		<li><a href="/api/backup/sql"><i class="fa fa-download"></i> <span>Backup SQL</span></a></li>
 	</ul>
 
 </section>
